[package]
name = "r"
description = "An experimental reimaginging of R"
authors = ["Doug Kelkhoff"]
version = "0.3.1"
edition = "2021"

license-file = "LICENSE.md"

repository = "https://github.com/dgkf/R/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[build-dependencies]
regex = "1.9.4"

[dependencies]
r_derive = { path = "r_derive" }

# parser
pest = "2.5.2"
pest_derive = "2.5.2"
lazy_static = "1.4.0"

# rng
rand = "0.8.5"
rand_distr = "0.4.3"
getrandom = "0.2.10"

# terminal interfaces
crossterm = { version = "0.27.0", optional = true }
reedline = { version = "0.22.0", optional = true }
nu-ansi-term = { version = "0.49.0", optional = true }

# wasm
wasm-bindgen = { version = "=0.2.87", optional = true }
js-sys = "0.3.64"

[features]
default = ["repl"]
tail-call-optimization = []
rest-args = []
repl = [
  "dep:crossterm", 
  "dep:reedline", 
  "dep:nu-ansi-term"
]

wasm = [
  "dep:wasm-bindgen", 
  "getrandom/js"  # rand requires getrandom be built with js feature for wasm
]
